Terminado, falta comentar

--- a/1TDAW_JOSELUIS_RUIZ_MEGAPRACTICA/nbproject/project.properties
+++ b/1TDAW_JOSELUIS_RUIZ_MEGAPRACTICA/nbproject/project.properties
@@ -36,9 +36,11 @@ dist.jlink.output=${dist.jlink.dir}/1TDAW_JOSELUIS_RUIZ_MEGAPRACTICA
 endorsed.classpath=
 excludes=
 file.reference.ojdbc11.jar=C:\\sqldeveloper\\jdbc\\lib\\ojdbc11.jar
+file.reference.ojdbc11.jar-1=C:\\Users\\Alex\\Desktop\\DAW\\ORACLE\\sqldeveloper-23.1.0.097.1607-x64\\sqldeveloper\\jdbc\\lib\\ojdbc11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.ojdbc11.jar-1}:\
     ${file.reference.ojdbc11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
