--- a/1TDAW_JOSELUIS_RUIZ_MEGAPRACTICA/nbproject/private/private.properties
+++ b/1TDAW_JOSELUIS_RUIZ_MEGAPRACTICA/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\aeg28\\AppData\\Roaming\\NetBeans\\20\\build.properties
+user.properties.file=C:\\Users\\Alex\\AppData\\Roaming\\NetBeans\\19\\build.properties
